@@ -1130,7 +1130,7 @@ Whenever the given C<type> is used, C<push_write> will the function with
 the handle object and the remaining arguments.
 
 The function is supposed to return a single octet string that will be
-appended to the write buffer, so you cna mentally treat this function as a
+appended to the write buffer, so you can mentally treat this function as a
 "arguments to on-the-wire-format" converter.
 
 Example: implement a custom write type C<join> that joins the remaining
@@ -2206,7 +2206,7 @@ you have outstanding requests in your read queue, then an EOF is
 considered an error as you clearly expected some data.
 
 To avoid this, make sure you have an empty read queue whenever your handle
-is supposed to be "idle" (i.e. connection closes are O.K.). You cna set
+is supposed to be "idle" (i.e. connection closes are O.K.). You can set
 an C<on_read> handler that simply pushes the first read requests in the
 queue.
 
@@ -2247,7 +2247,7 @@ unexpectedly.
 
 The second variant is a protocol where the client can drop the connection
 at any time. For TCP, this means that the server machine may run out of
-sockets easier, and in general, it means you cnanot distinguish a protocl
+sockets easier, and in general, it means you cannot distinguish a protocl
 failure/client crash from a normal connection close. Nevertheless, these
 kinds of protocols are common (and sometimes even the best solution to the
 problem).
