@@ -2,6 +2,14 @@ Revision history for Perl extension AnyEvent.
 
 TODO: document TCP_*** constants
 
+TODO: ae::stritc, regulalry check for invalid fds?
+TODO: critical messages log by default?
+TODO: document- boosted default logging level to critical.
+TOOD: stop internals abusing
+TODO: set loglevel to warn, even, as thats recommended?
+TODO: document default loglevel in table
+TODO: AE_LOG in tutorial?
+TODO: add google ipv6 public dns
 	- increase signal latency test timer considerably for poor little osx.
 
 6.02  Fri Aug 26 20:08:31 CEST 2011
